Práctica03modificada y con diseño

--- a/css.css
+++ b/css.css
@@ -2,3 +2,7 @@
     background-color: grey;
     color: green;
 }
+/*Comentario para el ejercicio 22, modificar el css*/
+.h{
+    background-color: coral;
+}
