Ejercicio 05. Finalizado y con estilo

--- a/css.css
+++ b/css.css
@@ -5,6 +5,9 @@
 .dos{
     background-color: coral;
 }
+.estilo{
+    background-color: red;
+}
 /*prueba olvidado*/
 /*Ejercicio 3 finalizado*/
 /*Ejercicio 4 finalizado*/
