--- a/css.css
+++ b/css.css
@@ -8,6 +8,9 @@
 .estilo{
     background-color: red;
 }
+body{
+    background-color: green;
+}
 /*prueba olvidado*/
 /*Ejercicio 3 finalizado*/
 /*Ejercicio 4 finalizado*/
